# borg

./: .appveyor.yml  .coafile  .coafile 2  .coverage 2  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  Brewfile  CHANGES  CHANGES-borg.txt  CHANGES-experimental.txt  CHANGES-merge-all.txt  CHANGES-merge.txt  CHANGES.rst  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE  MANIFEST.in  README  README.rst  README_WINDOWS.rst  SECURITY.md  Vagrantfile  appveyor.yml  buildwin32.py  conftest.py  pyproject.toml  setup.cfg  setup.py  setup_b2.py  setup_checksums.py  setup_compress.py  (+10 more)
.claude/: CLAUDE.md  settings.json
.eggs/: setuptools_scm-1.11.1-py3.5.egg
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: backport.yml  black.yaml  build-binary.yml  canary.yml  ci.yml  codeql-analysis.yml  freebsd.yml  freebsd14.yml  haiku.yml  netbsd.yml  openbsd.yml  toxicity-check.yml  windows.yml
.travis/: install.sh  run.sh  upload_coverage.sh
ESOF-docs/: 1.Software Processes.md  2.Requirements Elicitation.md  3.Software Architecture.md  README.md
attic/: __init__.py  _chunker.c  _hashindex.c  _version.py  archive.py  archiver.py  cache.py  chunker.pyx  crypto.py  crypto.pyx  fuse.py  hashindex.pyx  helpers.py  key.py  lrucache.py  platform.py  platform_darwin.pyx  platform_freebsd.pyx  platform_linux.pyx  remote.py  repository.py  xattr.py
attic/testsuite/: __init__.py  archive.py  archiver.py  chunker.py  crypto.py  hashindex.py  helpers.py  key.py  lrucache.py  platform.py  repository.py  xattr.py
borg/: __init__.py  __main__.py  _chunker.c  _hashindex.c  _version.py  archive.py  archiver.py  cache.py  chunker.pyx  compress.pyx  constants.py  converter.py  crypto.pyx  fuse.py  hash_sizes.py  hashindex.pyx  helpers.py  item.py  key.py  keymanager.py  locking.py  logger.py  lrucache.py  msg_pack.py  msgfmt.py  paperkey.html  platform.py  platform_base.py  platform_darwin.pyx  platform_freebsd.pyx  platform_linux.pyx  platform_posix.pyx  platform_windows.pyx  remote.py  repository.py  shellpattern.py  translation.py  upgrader.py  xattr.py
borg/support/: __init__.py  argparse.py  msgfmt.py
borg/testsuite/: __init__.py  archive.py  archiver.py  benchmark.py  chunker.py  compress.py  conftest.py  convert.py  converter.py  crypto.py  hashindex.py  helpers.py  item.py  key.py  locking.py  logger.py  lrucache.py  mock.py  msg_pack.py  platform.py  remote.py  repository.py  run.py  shellpattern.py  translation.py  upgrader.py  xattr.py
darc/: __init__.py  _chunker.c  _hashindex.c  _speedups.c  archive.py  archiver.py  cache.py  chunker.pyx  chunkifier.py  crypto.py  hashindex.h  hashindex.py  hashindex.pyx  helpers.py  key.py  keychain.py  lrucache.py  oaep.py  remote.py  repository.py  store.py  test.py  xattr.py
darc/testsuite/: __init__.py  archiver.py  chunker.py  crypto.py  hashindex.py  helpers.py  key.py  lrucache.py  repository.py  run.py  xattr.py
dedupestore/: __init__.py  _speedups.c  archive.py  archiver.py  bandstore.py  cache.py  chunkifier.py  crypt.py  crypto.py  fsstore.py  helpers.py  oaep.py  sqlitestore.py  store.py  test.py
dedupstore/: _chunkifier.c  archiver.py  chunker.py  chunkifier.py  repository.py  store.py
deployment/windows/: borg-shell.bat  buildwin32.py  installer.iss
doc/: design.txt
docs/: Makefile  api.rst  authors.rst  book.rst  borg_domain.py  changes.rst  changes_0.x.rst  changes_1.x.rst  commands.rst  conf.py  definitions.rst  deployment.rst  detailedusage.rst  development.rst  faq.rst  foreword.rst  generalusage.rst  global.rst.inc  index.rst  installation.rst  internals.rst  intro.rst  introduction.rst  make.bat  man_intro.rst  paperkey.html  quickstart.rst  quickstart_example.rst.inc  resources.rst  security.rst  support.rst  terminology.rst  tuning.rst  update_usage.sh  usage.rst  usage_general.rst.inc  windows.rst
docs/_static/: Makefile  logo.xcf  logo_font.txt  nature.css
docs/_templates/: downloads.html  globaltoc.html  layout.html  logo-text.html  versionselector.html
docs/binaries/: 00_README.txt
docs/deployment/: automated-local.rst  central-backup-server.rst  hosting-repositories.rst  image-backup.rst  non-root-user.rst  pull-backup.rst
docs/internals/: compaction.odg  compaction.vsd  data-structures.rst  encryption-aead.odg  encryption.odg  encryption.vsd  frontends.rst  object-graph.odg  object-graph.vsd  pack-layout.excalidraw  pack-objheader.excalidraw  pack-write-order.excalidraw  packs.rst  repositories.rst  security.rst  structure.odg  structure.vsd
docs/man/: borg-analyze.1  borg-benchmark-cpu.1  borg-benchmark-crud.1  borg-benchmark.1  borg-break-lock.1  (+57 more)
fake_pyrex/: README
po/: Makefile  fr_CA.po  messages.pot
requirements.d/: attic.txt  coala.txt  codestyle.txt  development.lock.txt  development.txt  docs.txt  fuse.txt  pyinstaller.txt
scripts/: Dockerfile.linux-run  Dockerfile.linux-tox  Install  attic  borg  borg.android.sh  borg.android.spec  borg.exe.spec  build-borg-using-nuitka.sh  build-borg-using-pyinstaller.sh  build-nuitka.sh  build-test-wrapper.sh  buildwin.bat  chunker_bench.py  chunker_comparison.py  darc  errorlist.py  faked-debug.sh  fetch-binaries  gendocs.py  glibc_check.py  hash_sizes.py  linux-run  make.py  msgpack2marshal.py  msys2-build  msys2-install-deps  py36-blake2.py  release  rest_perf_test.sh  sdist-sign  sign-binaries  test-ux.sh  test-ux.sh.blessed_stderr  upload-pypi  win-borg.exe.spec  win-build.ps1  win-build.sh  win-download-openssl.ps1  win-setup-build-env.ps1
test-wrapper/: Cargo.toml
test-wrapper/src/: daemon.rs  lib.rs  main.rs
test-wrapper/src/lib/: creation.rs  extattrs.rs  file_descriptors.rs  files.rs  internal_stat.rs  mod.rs  overrides.rs  permissions.rs  shared.rs  xattrs.rs
test-wrapper/src/lib/internal_stat/: linux32.rs  linux64.rs  mod.rs  other.rs  stat_base.rs
tests/: test_pr_smoke.py
vagrant-tools/: run-tests.sh  smb.conf  smbcredentials  sshd_config
(+704 files in other folders)
