[package]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
name = "test-wrappers"
version = "0.1.0"

[lib]
crate-type = ["dylib"]
name = "testwrapper"
path = "src/lib/mod.rs"

[[bin]]
name = "test-wrapper"
path = "src/main.rs"

[dependencies]
bincode = "0.8.0"
env_logger = "0.4.2"
errno = "0.2.3"
lazy_static = "0.2.8"
libc = "0.2.23"
log = "0.3.7"
rand = "0.3.15"
serde = "1.0.2"
serde_derive = "1.0.2"
twox-hash = "1.1.0"
